--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-native-firebase/app": "^14.5.0",
+    "@react-native-firebase/storage": "^14.5.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.7.2",
@@ -19,6 +21,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-image-picker": "^4.7.3",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
